# active_slam_drl

./: .gitignore  README.md  package.xml  setup.cfg  setup.py  tree_log.txt
active_slam_rl/: active_slam_reward_node.py  d3qn_agent.py  memory.py  ros2_test_app.py  ros2_test_gui_modern.py  ros2_train_d3qn.py  ros2_train_frontier.py  ros2_train_no_slam.py  test_agent.py  test_backend.py  test_config.py  test_d3qn.py  test_env.py  test_saver.py  turtlebot_env.py  turtlebot_env_frontier.py  turtlebot_env_no_slam.py  uncertainty_reward_node.py
active_slam_rl/training_output_frontier/20260124_140852_frontier/: d3qn_frontier_ep100.pth  d3qn_frontier_ep1000.pth  d3qn_frontier_ep1020.pth  d3qn_frontier_ep1040.pth  d3qn_frontier_ep1060.pth  d3qn_frontier_ep1080.pth  d3qn_frontier_ep1100.pth  d3qn_frontier_ep1120.pth  d3qn_frontier_ep1140.pth  d3qn_frontier_ep1160.pth  d3qn_frontier_ep1180.pth  d3qn_frontier_ep120.pth  d3qn_frontier_ep1200.pth  d3qn_frontier_ep1220.pth  d3qn_frontier_ep1240.pth  d3qn_frontier_ep1260.pth  d3qn_frontier_ep1280.pth  d3qn_frontier_ep1300.pth  d3qn_frontier_ep1320.pth  d3qn_frontier_ep1340.pth  d3qn_frontier_ep1360.pth  d3qn_frontier_ep1380.pth  d3qn_frontier_ep140.pth  d3qn_frontier_ep1400.pth  d3qn_frontier_ep1420.pth  d3qn_frontier_ep1440.pth  d3qn_frontier_ep1460.pth  d3qn_frontier_ep1480.pth  d3qn_frontier_ep1500.pth  d3qn_frontier_ep1520.pth  d3qn_frontier_ep1540.pth  d3qn_frontier_ep1560.pth  (+70 more)
launch/: training_env.launch.py  training_env_no_gui.launch.py
worlds/: circuit.world  circuit2.world  circuit2.worlddummy[  maze.world
(+189 files in other folders)
